fix anni z-index

--- a/styles/about.css
+++ b/styles/about.css
@@ -158,6 +158,7 @@ img.member.default.highlight {
     margin-right: 70%;
     margin-left: -70%;
     top:-1vh;
+    z-index: 1;
 }
 
 #member-maurice {
